--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
             content="width=device-width,initial-scale=1.0,user-scalable=no"
         />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <title>Aaron's Blog4 Back Stage</title>
     </head>
     <body>
         <div id="app"></div>
